Fix for bug #9796 "Query Cache caches queries with CURRENT_USER() function".

We should not cache queries using CURRENT_USER() function as we do it
for some other functions, e.g. USER() function.


mysql-test/r/query_cache.result:
  Let us test that queries with CURRENT_USER() function are not cached.
mysql-test/t/query_cache.test:
  Let us test that queries with CURRENT_USER() function are not cached.
sql/item_create.cc:
  create_func_current_user():
    We should not cache queries which use CURRENT_USER() function.